[package]
name = "cput"
version = "0.0.1"
authors = ["Mehrdad Arshad Rad <arshad.rad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.3"
crossterm = "0.11"
clap = "~2.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
